Table products {
  product_id serial [primary key]
  name varchar
  category varchar
  parameters jsonb
}

Table timestamps {
  timestamp_id serial [primary key]
  time_series_id integer [not null]
  attribute_id integer [not null]
  value text
  start_dt timestamp [not null]
  end_dt timestamp 
}

Ref: timestamps.time_series_id > time_series.time_series_id 
Ref: timestamps.attribute_id > attributes.attribute_id 

Table attributes {
  attribute_id serial [primary key]
  name text 
  data_type text [not null]
}

Table time_series {
  time_series_id serial [primary key]
  parent_time_series_id integer
  name text
  product_id integer [not null]
}

Ref: time_series.product_id > products.product_id 
Ref: time_series.parent_time_series_id > time_series.time_series_id 

Table forecasting_models {
  model_id serial [primary key]
  time_series_id integer [not null]
  feature_attribute_id integer [not null]
  target_attribute_id integer [not null]
  model_file_path varchar(255) [null] 
}

Ref: forecasting_models.time_series_id > time_series.time_series_id
Ref: forecasting_models.feature_attribute_id > attributes.attribute_id
Ref: forecasting_models.target_attribute_id > attributes.attribute_id